src/objects/Contact_Profile__c.object
<CustomObject>
    <description>This object is to capture the Physician profile information</description>
    <fields>
        <fullName>AFAblationBrandLoyalty__c</fullName>
        <label>AF Ablation - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>BTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JNJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AFAblationNoProcsPA__c</fullName>
        <label>AF Ablation - No. Procs PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFAblation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF Ablation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Outcome_of_Specific_Activity_Tactic__c</fullName>
        <inlineHelpText>Record the outcomes of this quarter&apos;s specific activities</inlineHelpText>
        <label>AF Outcome of Specific Activity/Tactic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_Specific_Activity_Tactic_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box to signify that a Specific activity has been assigned to this customer</description>
        <inlineHelpText>Tick this box to signify that a Specific activity has been assigned to this customer</inlineHelpText>
        <label>AF Specific Activity/Tactic Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Specific_Activity_Tactic__c</fullName>
        <inlineHelpText>Use this field to describe your Specific Activity/Tactics for this customer in this Quarter.  Ensure you list timelines for all tasks.</inlineHelpText>
        <label>AF Specific Activity/Tactic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASDSJMBrandLoyalty__c</fullName>
        <label>ASD - SJM Brand Loyalty %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AVP_No_Procedures_PA__c</fullName>
        <label>AVP - No. Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Angio_PCI_Vs_Diagnostic__c</fullName>
        <inlineHelpText>Enter the percentage of Total Angio procedures which are PCI</inlineHelpText>
        <label>Angio - PCI Vs Diagnostic %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AngiogramApproachRadial__c</fullName>
        <label>Angiogram - Approach Radial %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AngiogramNoofProcedures__c</fullName>
        <label>Angio - # of Procedures Per Annum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AngiogramSJMBrandLoyalty__c</fullName>
        <label>Angiogram - VCD SJM use %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AngiogramVCD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Angiogram - VCD?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AngioplastyApproachRadial__c</fullName>
        <label>Angioplasty - Approach Radial %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AngioplastyNoofProcedures__c</fullName>
        <label>Angioplasty - No. of Procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AngioplastySJMBrandLoyalty__c</fullName>
        <label>Angioplasty - VCD SJM use %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AngioplastyVCD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Angioplasty - VCD?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Angioseal_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if Physician is currently Angioseal certified</description>
        <inlineHelpText>Check this box if Physician is currently Angioseal certified</inlineHelpText>
        <label>Angioseal Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Angioseal_Re_Certification_due__c</fullName>
        <inlineHelpText>Use this field to note when a customer id due to be recertified in angioseal</inlineHelpText>
        <label>Angioseal Re-Certification due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Burr_Hole_Preference__c</fullName>
        <label>Burr Hole Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimloc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SureTek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plate Anchoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Result__c</fullName>
        <inlineHelpText>Use this field to describe the Outcome of your Specific Activity/Tactic listed in the previous field</inlineHelpText>
        <label>CRM Outcome of Specific Activity/Tactic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Specific_Activity_Tactic__c</fullName>
        <inlineHelpText>Use this field to Outline execution plans with this customer for this Quarter</inlineHelpText>
        <label>CRM Specific Activity/Tactic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRTNoProcsPA__c</fullName>
        <label>CRT - No. Procs PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRT_Brand_Loyalty_1__c</fullName>
        <inlineHelpText>Use this field to rank the physician&apos;s brand preferences when implanting CRT devices</inlineHelpText>
        <label>CRT - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRT_No_Procs_PA__c</fullName>
        <label>CRT - No. Procs PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certified_Angioseal_Evolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Angioseal Evolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Angioseal_STS_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Angioseal STS Plus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Angioseal_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Angioseal VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Femoseal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Femoseal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closes_but_chooses_to_use_Exoseal__c</fullName>
        <label>Closes but chooses to use Exoseal</label>
        <picklist>
            <picklistValues>
                <fullName>Easier to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient comfort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing left inside the vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punctures are predominantly &lt; 5F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No scarring with device of choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repuncture benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad experience with Angio-Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can close Bifurcation puncture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closes_but_chooses_to_use_Mynx__c</fullName>
        <label>Closes but chooses to use Mynx</label>
        <picklist>
            <picklistValues>
                <fullName>Easier to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient comfort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing left inside the vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punctures are predominantly &lt; 5F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No scarring with device of choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repuncture benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad experience with Angio-Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can close Bifurcation puncture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closes_but_chooses_to_use_Perclose__c</fullName>
        <label>Closes but chooses to use Perclose</label>
        <picklist>
            <picklistValues>
                <fullName>Easier to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient comfort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing left inside the vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punctures are predominantly &lt; 5F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No scarring with device of choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repuncture benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad experience with Angio-Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can close Bifurcation puncture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closes_but_chooses_to_use_Starclose__c</fullName>
        <label>Closes but chooses to use Starclose</label>
        <picklist>
            <picklistValues>
                <fullName>Easier to use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient comfort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing left inside the vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punctures are predominantly &lt; 5F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No scarring with device of choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repuncture benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad experience with Angio-Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can close Bifurcation puncture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Belief_on_Intravscular_Imaging__c</fullName>
        <label>Current Belief on Intravscular Imaging</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Dr_use_VCD_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Dr use VCD&apos;s?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ET_Staging__c</fullName>
        <label>ET Staging</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Edwards_Repair_Mitral_Brand_Preference__c</fullName>
        <label>Edwards Repair Mitral Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Edwards_Repair_Tricuspid_Br_Preference__c</fullName>
        <label>Edwards Repair Tricuspid Br Preference %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Edwards_TAVI_Brand_Preference__c</fullName>
        <label>Edwards TAVI Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Edwards_THV_Brand_Preference_Aortic__c</fullName>
        <label>Edwards THV Brand Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Edwards_THV_Brand_Preference_Mitral__c</fullName>
        <label>Edwards THV Brand Preference % Mitral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evolution_Certification_Date__c</fullName>
        <label>Evolution Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Femoral_Approach_Percentage__c</fullName>
        <label>Femoral Approach %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Femoseal_Certification_Date__c</fullName>
        <label>Femoseal Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fields_of_Practice__c</fullName>
        <inlineHelpText>Use this field to describe specific areas which a physician practices or has an active interest</inlineHelpText>
        <label>Fields of Practice</label>
        <picklist>
            <picklistValues>
                <fullName>Back Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Nurse Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Implantation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Echocardiography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophysiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head &amp; Neck Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movement Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Unit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renal Denervation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Heart - Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Heart - Paediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tavi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HVNoProcsPA__c</fullName>
        <label>HV - No. Procs PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HV_Brand_Loyalty__c</fullName>
        <inlineHelpText>Use this field to rank the physician&apos;s Brand Preferences when implanting HV devices</inlineHelpText>
        <label>HV - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Has_Used_Sutureless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Used Sutureless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IVI_BSX__c</fullName>
        <label>IVI - % BSX</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IVI_SJM__c</fullName>
        <label>IVI - % SJM</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IVI_Terumo__c</fullName>
        <label>IVI - % Terumo</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IVI_Volcano__c</fullName>
        <label>IVI - % Volcano</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplanterCRT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implanter - CRT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImplanterHV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implanter - HV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImplanterLV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implanter - LV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intraoperative_Imaging__c</fullName>
        <label>Intraoperative Imaging</label>
        <picklist>
            <picklistValues>
                <fullName>Fluoroscopy (C-Arm)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medtronic O-Arm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroLogica BodyTom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroLogica CereTom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brainlab Airo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMRIS suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intravascular_Imaging_Usage__c</fullName>
        <label>Intravascular Imaging Usage</label>
        <picklist>
            <picklistValues>
                <fullName>High - 6+ per month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium - 2-4 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low - 1-2 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAA_Certification_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the LAA certification process is complete</inlineHelpText>
        <label>LAA Certification Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAA_Certification_Date__c</fullName>
        <label>LAA Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAA_Certification_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the practitioner has begun his LAA Certification</inlineHelpText>
        <label>LAA Certification in Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAA_No_Procedures_PA__c</fullName>
        <label>LAA - No. Procedures PA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAA_SJM_Brand_Loyalty__c</fullName>
        <label>LAA - SJM Brand Loyalty %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVNoProcsPA__c</fullName>
        <label>LV - No. Procs PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LV_Brand_Loyalty__c</fullName>
        <inlineHelpText>USe this field to rank the Physician&apos;s Brand Preferences when implanting LV Devices</inlineHelpText>
        <label>LV - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>BSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MDT_MHV_Brand_Preference_Mitral__c</fullName>
        <label>MDT MHV Brand Preference % Mitral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_MHV_Preference_Aortic__c</fullName>
        <label>MDT MHV Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_Repair_Mitral_Brand_Preference__c</fullName>
        <label>MDT Repair Mitral Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_Repair_Tricuspid_Brand_Preference__c</fullName>
        <label>MDT Repair Tricuspid Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_TAVI_Brand_Preference__c</fullName>
        <label>MDT TAVI Brand Preference %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_THV_Brand_Preference_Aortic__c</fullName>
        <label>MDT THV Brand Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDT_THV_Brand_Preference_Mitral__c</fullName>
        <label>MDT THV Brand Preference % Mitral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MHVAorticBrandLoyalty__c</fullName>
        <label>MHV - Aortic - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>SJM-Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM-Regent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT-ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin - Carbomedics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MHVAorticProceduresPA__c</fullName>
        <label>MHV - Aortic # Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MHVMitralProceduresPA__c</fullName>
        <label>MHV - Mitral # Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MappingBrandLoyalty__c</fullName>
        <label>Mapping - Brand Loyalty</label>
        <picklist>
            <picklistValues>
                <fullName>BTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MappingNoProcsPA__c</fullName>
        <label>Mapping - No. Procs PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neurologist_ONS_DVD_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neurologist ONS DVD Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCT_Intravscular_Imaging_Cases_Per_Annum__c</fullName>
        <label>OCT-Intravscular Imaging Cases Per Annum</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_X_MHV_Brand_Preference_Mitral__c</fullName>
        <label>On-X MHV Brand Preference % Mitral</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>On_X_MHV_Preference_Aortic__c</fullName>
        <label>On-X MHV Preference % Aortic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Preference__c</fullName>
        <label>Other Lead Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Infinity Directional Lead #6172 (7.5mm contact span)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity Directional Lead #6173 (10.5mm contact span)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Staging__c</fullName>
        <label>Other Staging</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDA_Number_of_Procedures_PA__c</fullName>
        <label>PDA - Number of Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_Staging__c</fullName>
        <label>PD Staging</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PFOClosureNoProceduresPA__c</fullName>
        <label>PFO Closure - No. Procedures PA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFOClosureSJMBrandLoyalty__c</fullName>
        <label>PFO Closure - SJM Brand Loyalty %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percutaneous_Repair_Procedures_Mitral__c</fullName>
        <label>Percutaneous Repair Procedures Mitral %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Post_Op_Imaging__c</fullName>
        <label>Post-Op Imaging</label>
        <picklist>
            <picklistValues>
                <fullName>Fluoroscopy (C-Arm)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Practitioner_Middle_Name_1__c</fullName>
        <label>Practitioner Middle Name 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_Middle_Name_2__c</fullName>
        <label>Practitioner Middle Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>